--- a/src/assets/Components/homeComponents/Navbar.css
+++ b/src/assets/Components/homeComponents/Navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
+  background-color: whitesmoke;
   padding: 15px 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   /* position: fixed; */
@@ -32,8 +32,9 @@
 
 .brand-name {
   font-size: 1.4rem;
-  font-weight: bold;
-  color: #333;
+  font-weight: bolder;
+  color: black;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
   letter-spacing: 1px;
 }
 
@@ -87,7 +88,7 @@
 
 /* Contact Button */
 .contact-btn {
-  background-color: purple;
+  background-color: #7C4EE4;
   color: white;
   border: none;
   padding: 10px 18px;
