--- a/src/assets/Components/BlogComponents/Header.css
+++ b/src/assets/Components/BlogComponents/Header.css
@@ -29,9 +29,9 @@
 }
 
 /* Description */
-.description {
+.description12 {
   font-size: 20px;
-  color: #f0f0f0;
+  color: black;
   max-width: 800px;
   margin: 0 auto; /* Center the text */
   line-height: 1.6;
