--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -51,6 +51,7 @@
     transition: all 0.3s ease;
     background: rgba(255, 255, 255, 0.2);
     color: black;
+    border: 4px solid black;
   }
   
   /* Placeholder Text */
