--- a/src/Pages/Signup.css
+++ b/src/Pages/Signup.css
@@ -56,6 +56,7 @@
     transition: all 0.3s ease;
     background: rgba(255, 255, 255, 0.2); /* Semi-transparent fields */
     color: black;
+    border: 4px solid black;
   }
   
   /* Placeholder Text Color */
